VIDEO VIDEO VIDEO #34

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
 
 <body>
   <script>
-  Elm.Main.fullscreen()
-</script>
+  var app = Elm.Main.fullscreen();
+  </script>
+
+  <script type="text/javascript" src="video.js"></script>
 </body>
 
 </html>
