--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Elm Boilerplate</title>
+  <title>Blue Cross</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" type="ico" href="favicon.ico" sizes="16x16">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
   <script type="text/javascript" src="elm.js"></script>
   <link rel="stylesheet" href="style.min.css" />
