--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
 <body>
   <script>
   var app = Elm.Main.fullscreen();
-  </script>
+</script>
 
   <script type="text/javascript" src="video.js"></script>
+  <script type="text/javascript" src="photos.js"></script>
 </body>
 </html>
