--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,14 @@
   <script type="text/javascript" src="elm.js"></script>
   <link rel="stylesheet" href="style.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
-
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115437362-1"></script>
+  <script src="ga.js"></script>
+  
 </head>
 <body>
   <script>
   var app = Elm.Main.fullscreen();
 </script>
-
   <script type="text/javascript" src="photos.js"></script>
 </body>
 </html>
