+ Checks for IE and updates model accordingly  + Working sliders in IE Fixes #162 :tada:

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,13 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115437362-1"></script>
   <script src="ga.js"></script>
-  
+
 </head>
 <body>
   <script>
   var app = Elm.Main.fullscreen();
 </script>
+  <script type="text/javascript" src="ie.js"></script>
   <script type="text/javascript" src="photos.js"></script>
 </body>
 </html>
