Revert "Add Tag Manager Scripts"

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <script>
-  (function(w, d, s, l, i) {
-  w[l] = w[l] || [];
-  w[l].push({
-    'gtm.start': new Date().getTime(),
-    event: 'gtm.js'
-  });
-  var f = d.getElementsByTagName(s)[0],
-    j = d.createElement(s),
-    dl = l != 'dataLayer' ? '&l=' + l : '';
-  j.async = true;
-  j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-  f.parentNode.insertBefore(j, f);
-})(window, document, 'script', 'dataLayer', 'GTM-PN5F4PS');
-</script>
   <title>Blue Cross</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,16 +9,15 @@
   <script type="text/javascript" src="elm.js"></script>
   <link rel="stylesheet" href="style.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
-</head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115437362-1"></script>
+  <script src="ga.js"></script>
 
+</head>
 <body>
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PN5F4PS"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>
   var app = Elm.Main.fullscreen();
 </script>
   <script type="text/javascript" src="ie.js"></script>
   <script type="text/javascript" src="photos.js"></script>
 </body>
-
 </html>
